[project]
name = "moviebox-dl"
version = "0.1.0"
description = "Download movies using this simple tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "selenium>=4.36.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
